--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BBH+Hegarty&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import "tailwindcss";
 
 @theme {
   --color-primary: #ece6fc;
   --color-secondary: #ff7415;
+}
+
+h1 {
+  font-family: 'BBH Hegarty', sans-serif;
 }
 
 body {
